# pyseg

./: .gitignore  LICENCE  MANIFEST.in  README.md  setup.py  test.py
dict/: conf.ini
lexicon/: config.ini
src/: CMakeLists.txt  LICENCE  pyseg.c
